# replifactory_v7

./: .dockerignore  .eslintrc.cjs  .flake8  .git_archival.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  ISSUES.md  Makefile  README.md  config.yml  copilot_conversations.txt  data.ini  docker-compose.yml  entrypoint.sh  gcodes.md  gptanswer.py  gunicorn.conf.py  jsconfig.json  justfile  package-lock.json  package.json  pyproject.toml  replifactory_ftconf.py  vite.config.js  vue.config.js
.github/workflows/: start_release.yaml
backend/biofactory/: __init__.py  __main__.py  _version.py  app.py  events.py  experiment.py  experiment_manager.py  ftconf.py  machine_manager.py  usb_manager.py  virtual_usb_device.py  win32_service.py  win32_service.spec
backend/biofactory/config/: __init__.py  connection.py  folder.py  temperature.py
backend/biofactory/devices/: __init__.py  _machine.py  eeprom.py  laser.py  optical_density_sensor.py  photodiode.py  pump.py  reactor_selector.py  step_motor.py  stirrer.py  stirrers_group.py  tank.py  thermometer.py  valve.py  valves_group.py  vial.py
backend/biofactory/drivers/: __init__.py  adt75.py  at24c256c.py  ft2232h.py  ftdi.py  l6470h.py  mcp3421.py  pca9555.py  pca9629a.py  pca9685.py
backend/biofactory/machine/: __init__.py  biofactory_virtual.py  model_6.py  replifactory_v5.py
backend/biofactory/plugins/: __init__.py
backend/biofactory/plugins/experiments/: __init__.py
backend/biofactory/plugins/experiments/endless_growth/: plugin.py
backend/biofactory/plugins/experiments/od_measure/: plugin.py
backend/biofactory/server/: __init__.py  socketio.py
backend/biofactory/server/api/: __init__.py  connection.py  experiment.py  machine.py  security.py
backend/biofactory/server/static/: robots.txt
backend/biofactory/util/: comm.py
backend/replifactory/: __init__.py  __main__.py  _version.py  app.py  events.py  experiment.py  experiment_manager.py  ftconf.py  machine_manager.py  usb_manager.py  virtual_usb_device.py  win32_service.py
backend/replifactory/config/: __init__.py  folder.py  temperature.py
backend/replifactory/devices/: __init__.py  _machine.py  eeprom.py  laser.py  optical_density_sensor.py  photodiode.py  pump.py  reactor_selector.py  step_motor.py  stirrer.py  stirrers_group.py  thermometer.py  valve.py  valves_group.py  vial.py
backend/replifactory/drivers/: __init__.py  adt75.py  at24c256c.py  ft2232h.py  ftdi.py  l6470h.py  mcp3421.py  pca9555.py  pca9629a.py  pca9685.py
backend/replifactory/machine/: __init__.py  model_6.py  replifactory_v5.py  replifactory_virtual.py
backend/replifactory/plugins/: __init__.py
backend/replifactory/plugins/experiments/: __init__.py
backend/replifactory/plugins/experiments/endless_growth/: plugin.py
backend/replifactory/plugins/experiments/od_measure/: __init__.py  plugin.py
backend/replifactory/server/: __init__.py  socketio.py
backend/replifactory/server/api/: __init__.py  connection.py  experiment.py  machine.py  security.py
backend/replifactory/server/routes/: device_routes.py  service_routes.py
backend/replifactory/util/: __init__.py  comm.py  flask.py
backend_tests/replifactory/machine/: test_reactor.py
backend_tests/replifactory/util/: test_flask.py
docs/: experiments.md  gcodes.md  processes.md
documentation/: conf.py  index.rst
flask_app/: Dockerfile  __init__.py  app.py  requirements.txt  server.py
flask_app/experiment/: culture.py  experiment.py  export.py  growth_rate.py  models.py  plot.py
flask_app/experiment/cultures_old/: batch.py  blank.py  chemostat.py  culture_universal.py  lagoon.py  lagoon_seva.py  morbidostat.py  patients.py  plotting.py  stress_ramp.py  turbidostat.py
flask_app/minimal_device/: base_device.py  eeprom.py
flask_app/replifactory/: __init__.py  events.py  experiment.py  experiment_manager.py  machine_manager.py  replifactory.db  socketio.py  usb_manager.py  usbmonitor.py  virtual_usb_device.py
flask_app/replifactory/api/: __init__.py  connection.py  experiment.py  machine.py  security.py
flask_app/replifactory/config/: __init__.py
flask_app/replifactory/devices/: __init__.py  eeprom.py  laser.py  machine.py  optical_density_sensor.py  optical_desity_sensor.py  photodiode.py  pump.py  reactor_selector.py  step_motor.py  stirrer.py  stirrers_group.py  thermometer.py  valve.py  valves_group.py  vial.py
flask_app/replifactory/drivers/: __init__.py  adt75.py  at24c256c.py  ft2232h.py  ftdi.py  l6470h.py  mcp3421.py  pca9555.py  pca9629a.py  pca9685.py
flask_app/replifactory/experiment/: __init__.py  endless growth.py  endless_growth.py  od_measure.py
flask_app/replifactory/machine/: __init__.py  model_6.py  replifactory_v5.py  replifactory_virtual.py
flask_app/replifactory/plugins/: __init__.py
flask_app/replifactory/plugins/experiments/: __init__.py
flask_app/replifactory/plugins/experiments/endless_growth/: plugin.py
flask_app/replifactory/util/: __init__.py  comm.py  flask.py
flask_app/routes/: device_routes.py  experiment_routes.py  service_routes.py
flask_app/tests/: culture_test.py  culture_update_test.py  db _update_test.py  experiment_test.py  plot_test.py  tests.py
flask_app_tests/replifactory/machine/: test_reactor.py
flask_app_tests/replifactory/util/: test_flask.py
sphinx/: Makefile
vue/: Dockerfile  README.md  entrypoint.sh  index.html
vue/public/: index.html
vue/src/: api.js  main.js  plugins.js  socket.js  versions.js
vue/src/client/: App.vue  calibration.js  config.js  deviceStore.js  experimentStore.js  machineStore.js  store.js
vue/src/client/components/: ConnectionManager.vue  ConnectionState.vue  CustomDynamicComponent.vue  DynamicComponent.vue  HomeSection.vue  Login.vue  MaintanceSection.vue  Replifactory.vue
vue/src/client/pages/: BiofactoryPage.vue  LoginPage.vue  ReplifactoryPage.vue
vue/src/client/router/: BootstrapRouterLink.vue  index.js
vue/src/client/store/: _experimentStore.js  deviceStore.js  experimentStore.js  index.js  machineStore.js  pluginsStore.js  securityStore.js
vue/src/server/: express_server.js
(+118 files in other folders)
