[tool.poetry]
name = "replifactory"
version = "7.0.0"
description = "replifactory morbidostat python package"
authors = ["Catalin Rusnac <ctlnrsnc@gmail.com>"]
maintainers = [
    "Fedor Gagarin <fddgagarin@gmail.com>",
]
readme = "README.md"
homepage = "https://replifactory.com"
packages = [
    { include = "**/*.py", from = "." },
    { include = "replifactory_ftconf.py" },
]

[tool.poetry.scripts]
ftconf = 'replifactory_ftconf:main'
replifactory = 'flask_app:main'

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
blinker = "^1.6.2"
click = "^8.1.3"
colorama = "^0.4.6"
flask = "^3.0.0"
flask_cors = "*"
flask_sqlalchemy = "*"
flask-static-digest = "^0.4.0"
gspread = "*"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
matplotlib = "*"
numpy = "1.22.4"  # https://github.com/scipy/scipy/blob/main/pyproject.toml
oauth2client = "*"
pandas = "*"
plotly = "*"
pydantic = "^2.4.0"
pyftdi = "^0.54.0"
pyserial = "^3.5"
pyusb = "^1.2.1"
PyYAML = "^6.0"
schedule = "*"
scipy = "1.12.0"
six = "^1.16.0"
zipp = "^3.15.0"
pyinstaller = [
    { version = "~5.13.0", platform = "win32" },
]
pywin32 = [
    { version = "306", platform = "win32" }
]
flask-socketio = "^5.3.6"
flask-jwt-extended = "^4.5.3"
usb-monitor = "^1.15"
pydantic-yaml = "^1.2.0"
flask-security-too = {extras = ["common", "fsqla"], version = "^5.3.3"}
bcrypt = "^4.1.2"

[tool.poetry.extras]
replifactory = ["python-pxushover", "python-telegram-bot"]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"


[tool.poetry.group.server.dependencies]
gunicorn = "^21.2.0"
gevent = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
    "--cov=replifactory",
    "--cov-report=xml",
    "--cov-report=term",
]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::DeprecationWarning:jupyter_client.*:',
]

[tool.isort]
profile = "black"
src_paths = [".", "tests"]
